--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
             <h1 class="title">Sign Up</h1>
             <footer class="footer">
                 <a href="#" class="link"> Privacy policy></a>
-                <span class="ampersand">&</span>
+                <span class="amp">&amp</span>
                 <a href="#" class="link">terms of service</a> 
             </footer>
         </div>
         <div class="right-column">
-            Desine:
+            <div class="close">x</div>
+            <form class="form">
+                <div class="form-row">
+                    <label for="username">User name</label>
+                    <input id="username" type="text"></div>
+                <div class="form-row">
+                    <label for="email">Email</label>
+                    <input id="email" type="text"></div>
+                <div class="form-row">
+                    <label for="pass">Password</label>
+                    <input id="pass" type="text"></div>
+                <div class="form-row">
+                    <label for="repass">Repeat password</label>
+                    <input id="repass" type="text"></div>
+                <div class="form-row">
+                    <div class="btn">Get started</div>
+                    <span class="or" >or</span>
+                    <a class="blue-link" href="#">Sighn In</a>
+                </div>
+                
+            </form>
         </div>
     </main>
 </body>
