--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <form class="form">
                 <div class="form-row">
                     <label for="username">User name</label>
-                    <input id="username" type="text"></div>
+                    <input id="username" type="text" placeholder="Enter your username"></div>
                 <div class="form-row">
                     <label for="email">Email</label>
-                    <input id="email" type="text"></div>
+                    <input id="email" type="email" placeholder="Enter your email"></div>
                 <div class="form-row">
                     <label for="pass">Password</label>
-                    <input id="pass" type="text"></div>
+                    <input id="pass" type="password" placeholder="password"></div>
                 <div class="form-row">
                     <label for="repass">Repeat password</label>
-                    <input id="repass" type="text"></div>
+                    <input id="repass" type="password" placeholder="password"></div>
                 <div class="form-row">
                     <div class="btn">Get started</div>
                     <span class="or" >or</span>
