--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <img src="./kalnai3.png" alt="background" class="background">
     <main class="container">
         <div class="left-column">
             <h1 class="title">Sign Up</h1>
