--- a/login/index.html
+++ b/login/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sighn in</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
-    <img src="./kalnai3.png" alt="background" class="background">
+    <img src="../kalnai3.png" alt="background" class="background">
     <main class="container">
         <div class="left-column">
-            <h1 class="title">Sign Up</h1>
+            <h1 class="title">Sign in</h1>
             <footer class="footer">
                 <a href="#" class="link"> Privacy policy></a>
                 <span class="amp">&amp</span>
@@ -21,21 +21,16 @@
             <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
-                    <label for="username">User name</label>
-                    <input id="username" type="text" placeholder="Enter your username"></div>
-                <div class="form-row">
                     <label for="email">Email</label>
                     <input id="email" type="email" placeholder="Enter your email"></div>
                 <div class="form-row">
                     <label for="pass">Password</label>
                     <input id="pass" type="password" placeholder="password"></div>
+                
                 <div class="form-row">
-                    <label for="repass">Repeat password</label>
-                    <input id="repass" type="password" placeholder="password"></div>
-                <div class="form-row">
-                    <div class="btn">Get started</div>
+                    <div class="btn">Login</div>
                     <span class="or" >or</span>
-                    <a class="blue-link" href="./login/">Sighn In</a>
+                    <a class="blue-link" href="../forgot-password/">Forgot password?</a>
                 </div>
                 
             </form>
